# CameraManager-Mirror

./: .gitignore  CM_include.hpp  CMakeLists.txt  CameraManager.cpp  README.md  package.xml
CameraManager/: CMakeLists.txt  package.xml
CameraManager/doc/: Doxyfile
CameraManager/include/CameraManager/: CM_include.hpp  CameraManagerNode.hpp  H264Decoder.hpp  camera_object.hpp  command_generation.hpp  command_handler.hpp  settings.hpp  startup.hpp  streaming.hpp
CameraManager/src/: CM_include.hpp  CameraManager.cpp
CameraManager/src/utilities/cameras/: camera_object.cpp  camera_object.hpp  settings.cpp  settings.hpp  startup.cpp  startup.hpp
CameraManager/src/utilities/commands/: command_board.cpp  command_generation.cpp  command_handler.cpp
CameraManager/src/utilities/communication/compression/: H264Decoder.cpp  H264Encoder.cpp
CameraManager/src/utilities/communication/streaming/: streaming.cpp  streaming.hpp
doc/: mainpage.md
include/CameraManager/: CM_include.hpp  CameraManagerNode.hpp  Decoder.hpp  Encoder.hpp  camera_metadata.hpp  camera_object.hpp  camera_thread.hpp  command_board.hpp  command_generation.hpp  command_handler.hpp  realsense_interface.hpp  settings.hpp  startup.hpp  streaming.hpp
launch/: cm_autonomy.launch.py  cm_basic.launch.py  cm_pano_test.launch.py  cm_sample_es.launch.py  cm_stream_test.launch.py  cm_test_Izaak.launch.py
libs/: CM_CommandBuilder.py  pyserver.py
notes/: future plans.txt  ready.txt
src/: CameraManager.cpp
src/utilities/cameras/: camera_object.cpp  camera_thread.cpp  realsense_interface.cpp  settings.cpp  startup.cpp
src/utilities/commands/: command_board.cpp  command_generation.cpp  command_handler.cpp
src/utilities/communication/compression/: Decoder.cpp  Encoder.cpp
src/utilities/communication/streaming/: streaming.cpp
src/utilities/streaming/: streaming.cpp
test/: commandwriter.py  streamlistener.py
utilities/cameras/: camera_object.cpp  camera_object.hpp  settings.cpp  settings.hpp  startup.cpp
utilities/commands/: command_board.cpp  command_board.hpp  command_handler.cpp  command_handler.hpp
utilities/communication/compression/: AVIF_ctl.cpp  AVIF_ctl.hpp  H264Encoder.hpp
utilities/communication/streaming/: streaming.cpp  streaming.hpp
