<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_manager</name>
  <version>0.0.0</version>
  <description>High speed camera management system for the 2025 robot</description>
  <maintainer email="wrs00010@mix.wvu.edu">William Streck</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>OpenCV</depend>
  <depend>sensor_msgs</depend>

  <build_depend>libavcodec-dev</build_depend>
  <build_depend>libavformat-dev</build_depend>
  <build_depend>libavutil-dev</build_depend>
  <build_depend>libswscale-dev</build_depend>
  <build_depend>libavfilter-dev</build_depend>
  <build_depend>libavdevice-dev</build_depend>

  <exec_depend>libavcodec-dev</exec_depend>
  <exec_depend>libavformat-dev</exec_depend>
  <exec_depend>libavutil-dev</exec_depend>
  <exec_depend>libswscale-dev</exec_depend>
  <exec_depend>libavfilter-dev</exec_depend>
  <exec_depend>libavdevice-dev</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
